using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;

public class GameEnum
{
    public enum ORB_KIND
    {
        BLUE,
        GREEN,
        PURPLE
    }
}
